# blazing

./: .gitignore  Cargo.toml  README.md  secretfile.txt  settings.toml  template.html
public/: index.html  main.css
public/folder3/: test.rhai
public/rhai/html test/: index.html
public/rhai/query test/: test.rhai
public/testing/rhai/html test/: index.html  test.rhai
public/testing/rhai/query test/: query.rhai  test.rhai
public/testing/static/index exists/: index.html
public/testing/static/no index test/: test.html
public/testing/static/no index test/hidden folder/: hiddenfile.txt
src/: http_data.rs  main.rs  utils.rs
