[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
httpdate = "1.0.2"
infer = "0.13.0"
rand = "0.8.5"
rhai = "1.14.0"
rhai-fs = "0.1.2"
urlencoding = "2.1.2"
