[package]
name = "blazing-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
httpdate = "1.0.2"
infer = "0.13.0"
rand = "0.8.5"
rhai = "1.14.0"
rhai-fs = "0.1.2"
tokio = { version = "1.28.1", features = ["full"] }
urlencoding = "2.1.2"
rusqlite = { version = "0.29.0", features = ["bundled"] }
anyinput = "0.1.6"

